fix mermaid till dark mode can be done

--- a/written/input.css
+++ b/written/input.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 main {
+  .mermaid {
+    @apply bg-slate-100;
+  }
+
   blockquote {
     @apply text-gray-500 dark:text-gray-400;
     p {
